Text and img hover effects, more website design.

--- a/baigiamasis/index.html
+++ b/baigiamasis/index.html
@@ -18,17 +18,18 @@
                 <div class="row">
                     <div class="col-2 px-0">
                         <div class="dropdown">
-                <span>
-                <i class="text-secondary fas fa-globe-americas"></i>
-                </span>
-                            <button class="btn dropdown text-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                            <span>
+                                <i class="text-secondary fas fa-globe-americas fa-sm"></i>
+                            </span>
+                            <button class="btn dropdown text-secondary" type="button" id="dropdownMenuButton"
+                                    data-toggle="dropdown"
                                     aria-haspopup="true" aria-expanded="false">
                                 ENGLISH
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">
                                     ENGLISH
-                                    <i class="fas fa-check"></i>
+                                    <i class="fas fa-check fa-sm"></i>
                                 </a>
                                 <a class="dropdown-item" href="#">RTL</a>
                             </div>
@@ -36,16 +37,16 @@
                     </div>
                     <div class="text-secondary col-10 px-0 my-auto">
                     <span>
-                        <i class="fas fa-key"></i>
+                        <i class="fas fa-key fa-sm"></i>
                         <a>LOGIN</a>
                     </span>
                         <span>
-                        <i class="fas fa-phone-alt"></i>
+                        <i class="fas fa-phone-alt fa-sm"></i>
                         <span>Call Us :</span>
                         (123) 456 - 7890
                     </span>
                         <span>
-                        <i class="fab fa-rocketchat"></i>
+                        <i class="fab fa-rocketchat fa-sm"></i>
                         <span>Support :</span>
                         (123) 456 - 7890
                     </span>
@@ -93,12 +94,15 @@
     </div>
 </div>
 <header class="container">
-    <div class="row">
+    <nav class="row">
         <div class="col-12 px-0">
-            <nav class="navbar navbar-expand-lg navbar-light px-0">
-                <a href="#">
-                    <img src="css/img/logo-dark.png" alt="Enar Logo">
-                </a>
+            <nav class="navbar navbar-expand-lg navbar-light px-0 py-0" data-spy="affix" data-offset-top="60"
+                 data-offset-bottom="200">
+                <div class="mr-5">
+                    <a href="#">
+                        <img src="css/img/logo-dark.png" alt="Enar Logo">
+                    </a>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
@@ -137,7 +141,7 @@
                         </li>
                     </ul>
                     <div class="form-group">
-                            <i class="fas fa-search"></i>
+                        <i class="fas fa-search"></i>
                         <input type="search" class="form-control" id="search" placeholder="Search Here ...">
                     </div>
                     <button type="button">
@@ -146,7 +150,7 @@
                 </div>
             </nav>
         </div>
-    </div>
+    </nav>
 </header>
 <section class="container-fluid">
     <div class="row">
@@ -200,7 +204,7 @@
 </section>
 <section class="container spacer">
     <div class="row">
-        <div class="col-4">
+        <div class="col-4 grow">
             <div class="row">
                 <div class="col-3">
                     <div class="circle">
@@ -217,7 +221,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-4 grow">
             <div class="row">
                 <div class="col-3">
                     <div class="circle">
@@ -235,7 +239,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-4 grow">
             <div class="row">
                 <div class="col-3">
                     <div class="circle">
@@ -413,7 +417,8 @@
                             <span>
                                 <i class="far fa-user"></i>
                             </span>
-                            <button class="btn btn-link text-secondary" data-toggle="collapse" data-target="#collapseOne"
+                            <button class="btn btn-link text-secondary" data-toggle="collapse"
+                                    data-target="#collapseOne"
                                     aria-expanded="true" aria-controls="collapseOne">
                                 CUSTOMER SERVICES 24/7
                             </button>
@@ -445,7 +450,8 @@
                             <span>
                                 <i class="far fa-heart"></i>
                             </span>
-                            <button class="btn btn-link collapsed text-secondary" data-toggle="collapse" data-target="#collapseTwo"
+                            <button class="btn btn-link collapsed text-secondary" data-toggle="collapse"
+                                    data-target="#collapseTwo"
                                     aria-expanded="false" aria-controls="collapseTwo">
                                 INTEGRITY AND HONESTY
                             </button>
@@ -477,7 +483,8 @@
                             <span>
                                 <i class="fas fa-check"></i>
                             </span>
-                            <button class="btn btn-link collapsed text-secondary" data-toggle="collapse" data-target="#collapseThree"
+                            <button class="btn btn-link collapsed text-secondary" data-toggle="collapse"
+                                    data-target="#collapseThree"
                                     aria-expanded="false" aria-controls="collapseThree">
                                 THE BEST SALES ON THE COUNTRY
                             </button>
@@ -555,6 +562,17 @@
                 <div>
                     <h4>Projects</h4>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2>MEET OUR TEAM</h2>
+                <h5 class="text-secondary">We believe in a diverse range of personel to bring creative skills, thoughts,
+                    and ideas to the table.</h5>
             </div>
         </div>
     </div>
