More hovers, second carusele, scss some fixes.

--- a/baigiamasis/index.html
+++ b/baigiamasis/index.html
@@ -342,8 +342,11 @@
                                 <li>Many Blog Pages</li>
                             </ul>
                         </div>
-                        <div class="col-6 px-0">
-                            <img class="img-fluid" src="css/img/porto5.jpg" alt="img">
+                        <div class="col-6 px-0 grow overflow-hidden">
+                            <div class="img">
+                                <img class="img-fluid" src="css/img/porto5.jpg" alt="img">
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -368,8 +371,10 @@
                                 <li>Many Blog Pages</li>
                             </ul>
                         </div>
-                        <div class="col-6 px-0">
-                            <img class="img-fluid" src="css/img/porto3.jpg" alt="img">
+                        <div class="col-6 px-0 grow overflow-hidden">
+                            <div class="img">
+                                <img class="img-fluid" src="css/img/porto3.jpg" alt="img">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -394,8 +399,10 @@
                                 <li>Many Blog Pages</li>
                             </ul>
                         </div>
-                        <div class="col-6 px-0">
-                            <img class="img-fluid" src="css/img/porto4.jpg" alt="img">
+                        <div class="col-6 px-0 grow overflow-hidden">
+                            <div class="img">
+                                <img class="img-fluid" src="css/img/porto4.jpg" alt="img">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -413,7 +420,7 @@
             <div id="accordion">
                 <div class="card">
                     <div class="card-header py-0" id="headingOne">
-                        <h5 class="mb-0">
+                        <h5 class="mb-0 text-secondary">
                             <span>
                                 <i class="far fa-user"></i>
                             </span>
@@ -446,7 +453,7 @@
                 </div>
                 <div class="card">
                     <div class="card-header py-0" id="headingTwo">
-                        <h5 class="mb-0">
+                        <h5 class="mb-0 text-secondary">
                             <span>
                                 <i class="far fa-heart"></i>
                             </span>
@@ -479,7 +486,7 @@
                 </div>
                 <div class="card">
                     <div class="card-header py-0" id="headingThree">
-                        <h5 class="mb-0">
+                        <h5 class="mb-0 text-secondary">
                             <span>
                                 <i class="fas fa-check"></i>
                             </span>
@@ -518,61 +525,119 @@
     <div class="container spacer">
         <div class="row">
             <div class="col-md-3 px-0">
-                <div>
+                <div class="color">
                     <i class="far fa-user fa-2x"></i>
                 </div>
                 <div class="my-4">
                     <h4 class="value" data-speed="4000" data-from="0" data-to="1500">0</h4>
                 </div>
                 <div>
-                    <h4>Clients</h4>
+                    <h4 class="text-secondary">Clients</h4>
                 </div>
             </div>
             <div class="col-md-3 px-0">
-                <span>
+                <div class="color">
                     <i class="far fa-heart fa-2x"></i>
-                </span>
+                </div>
                 <h4 class="my-4">
                     <span class="value" data-speed="4000" data-from="0" data-to="13">0</span>
                 </h4>
-                <div>
+                <div class="text-secondary">
                     <h4>Awards</h4>
                 </div>
             </div>
             <div class="col-md-3 px-0">
-                <span>
+                <div class="color">
                     <i class="fas fa-chevron-left fa-lg"></i>
                     <span id="slash">/</span>
                     <i class="fas fa-chevron-right fa-lg"></i>
-                </span>
+                </div>
                 <h4 class="my-4">
                     <span class="value" data-speed="4000" data-from="0" data-to="94771">0</span>
                 </h4>
                 <div>
-                    <h4>Line Of Code</h4>
+                    <h4 class="text-secondary">Line Of Code</h4>
                 </div>
             </div>
             <div class="col-md-3 px-0">
-                <span>
-                   <i class="far fa-paper-plane fa-2x"></i>
-                </span>
+                <div class="color">
+                    <i class="far fa-paper-plane fa-2x"></i>
+                </div>
                 <h4 class="my-4">
                     <span class="value" data-speed="4000" data-from="0" data-to="384">0</span>
                 </h4>
                 <div>
-                    <h4>Projects</h4>
+                    <h4 class="text-secondary">Projects</h4>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<section>
+
+</section>
 <section class="container-fluid">
-    <div class="container">
+    <div class="container spacer">
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2>MEET OUR TEAM</h2>
-                <h5 class="text-secondary">We believe in a diverse range of personel to bring creative skills, thoughts,
+                <h5 class="text-secondary">We believe in a diverse range of personnel to bring creative skills,
+                    thoughts,
                     and ideas to the table.</h5>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 px-0">
+                <div class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <a href="#">
+                                                <h5>John Boris</h5>
+                                            </a>
+                                            <span>CCO & Product Manager</span>
+                                            <span>
+                                        Lorem Ipsum is simply dummy to text of the printing and Lorem off typesetting industry.</span>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <img src="css/img/team1-large.jpg">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <img src="css/img/team1-large.jpg">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <a href="#">
+                                                <h5>Nix Maxwell</h5>
+                                            </a>
+                                            <span>Manager</span>
+                                            <span>
+                                        Lorem Ipsum is simply dummy to text of the printing and Lorem off typesetting industry.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
