--- a/baigiamasis/index.html
+++ b/baigiamasis/index.html
@@ -142,10 +142,11 @@
                     </ul>
                     <div class="form-group">
                         <i class="fas fa-search"></i>
-                        <input type="search" class="form-control" id="search" placeholder="Search Here ...">
+                        <input type="search" name=search"" class="form-control" id="search"
+                               placeholder="Search Here ...">
                     </div>
                     <button type="button">
-                        <i class="fas fa-cart-plus"></i>
+                        <i class="fas fa-cart-plus fa-xs text-secondary"></i>
                     </button>
                 </div>
             </nav>
@@ -164,6 +165,16 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="css/img/slide2.jpg" alt="First slide">
+                        <span>
+                            <span>
+                                <span>Enar Theme IS The Best</span>
+                                <a>
+                                    <span>
+                                        <i class="fas fa-chevron-right"></i>
+                                    </span>
+                                </a>
+                            </span>
+                        </span>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="css/img/slide2.jpg" alt="Second slide">
@@ -323,7 +334,7 @@
             <div class="tab-content">
                 <div class="tab-pane container active" id="home">
                     <div class="row">
-                        <div class="col-10 px-0 text-secondary">
+                        <div class="col-12 mb-3 px-0 text-secondary">
                             <span>Lore Ipsum is simply dummy text of the printing and typeseting industry.
                                 Lorem in text Ipsum has been industry standart dummy text ever since the when an lunesi know.
                             </span>
@@ -346,13 +357,12 @@
                             <div class="img">
                                 <img class="img-fluid" src="css/img/porto5.jpg" alt="img">
                             </div>
-
                         </div>
                     </div>
                 </div>
                 <div class="tab-pane container fade" id="menu1">
                     <div class="row">
-                        <div class="col-10 px-0 text-secondary">
+                        <div class="col-12 mb-3 px-0 text-secondary">
                             <span>Lore Ipsum is simply dummy text of the printing and typeseting industry.
                                 Lorem in text Ipsum has been industry standart dummy text ever since the when an lunesi know.
                             </span>
@@ -380,7 +390,7 @@
                 </div>
                 <div class="tab-pane container fade" id="menu2">
                     <div class="row">
-                        <div class="col-10 px-0 text-secondary">
+                        <div class="col-12 mb-3 px-0 text-secondary">
                             <span>Lore Ipsum is simply dummy text of the printing and typeseting industry.
                                 Lorem in text Ipsum has been industry standart dummy text ever since the when an lunesi know.
                             </span>
@@ -573,9 +583,6 @@
         </div>
     </div>
 </section>
-<section>
-
-</section>
 <section class="container-fluid">
     <div class="container spacer">
         <div class="row">
@@ -596,49 +603,101 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <a href="#">
-                                                <h5>John Boris</h5>
-                                            </a>
-                                            <span>CCO & Product Manager</span>
-                                            <span>
-                                        Lorem Ipsum is simply dummy to text of the printing and Lorem off typesetting industry.</span>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <img src="css/img/team1-large.jpg">
+                            <div class="row team">
+                                <div class="row my-3">
+                                    <div class="col-md-6">
+                                        <div class="row">
+                                            <div class="col-md-7 text"><h5> JOHN BORIS </h5>
+                                                <span class="text-secondary">CCO & Product manager</span>
+                                                <p class="text-secondary pt-3"> Lorem Ipsum is a simply dummie to
+                                                    text of the printing and Lorem off typesetting industry. </p>
+                                            </div>
+                                            <div class="col-md-5 team-photo"><img src="css/img/team1-large.jpg"></div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <img src="css/img/team1-large.jpg">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <a href="#">
-                                                <h5>Nix Maxwell</h5>
-                                            </a>
-                                            <span>Manager</span>
-                                            <span>
-                                        Lorem Ipsum is simply dummy to text of the printing and Lorem off typesetting industry.</span>
+                                    <div class="col-md-6">
+                                        <div class="row">
+                                            <div class="col-md-5 team-photo"><img src="css/img/team2-medium.jpg"></div>
+                                            <div class="col-md-7 text2"><h5> NIX MAXWELL </h5>
+                                                <span class="text-secondary">Manager</span>
+                                                <p class="text-secondary pt-3"> Lorem Ipsum is a simply dummie to
+                                                    text of the printing and Lorem off typesetting industry. </p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100">
+                            <div class="row team">
+                                <div class="row my-3">
+                                    <div class="col-md-6">
+                                        <div class="row">
+                                            <div class="col-md-7 text"><h5> Jack Smith </h5>
+                                                <span class="text-secondary">Photogropher</span>
+                                                <p class="text-secondary pt-3"> Lorem Ipsum is a simply dummie to
+                                                    text of the printing and Lorem off typesetting industry. </p>
+                                            </div>
+                                            <div class="col-md-5 team-photo"><img src="css/img/team3-large.jpg"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="row">
+                                            <div class="col-md-5 team-photo"><img src="css/img/team4-large.jpg"></div>
+                                            <div class="col-md-7 text2"><h5>John Doe</h5>
+                                                <span class="text-secondary">Web Designer</span>
+                                                <p class="text-secondary pt-3"> Lorem Ipsum is a simply dummie to
+                                                    text of the printing and Lorem off typesetting industry. </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row team">
+                            <div class="row my-3">
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <div class="col-md-7 text"><h5>Mike Ehrmantraut</h5>
+                                            <span class="text-secondary">Graphic Designer</span>
+                                            <p class="text-secondary pt-3"> Lorem Ipsum is a simply dummie to
+                                                text of the printing and Lorem off typesetting industry. </p>
+                                        </div>
+                                        <div class="col-md-5 team-photo"><img src="css/img/team5-large.jpg"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <div class="col-md-5 team-photo"><img src="css/img/team6-large.jpg"></div>
+                                        <div class="col-md-7 text2"><h5>John Smith</h5>
+                                            <span class="text-secondary">Programmer & SEO</span>
+                                            <p class="text-secondary pt-3"> Lorem Ipsum is a simply dummie to
+                                                text of the printing and Lorem off typesetting industry. </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+<section class="container spacer">
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Our Services</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+
+        </div>
+        <div class="col-md-6">
+            <img src="css/img/looking1.jpg">
         </div>
     </div>
 </section>
