Footer elements done, need more styling and some hovers.

--- a/baigiamasis/index.html
+++ b/baigiamasis/index.html
@@ -271,6 +271,7 @@
         </div>
     </div>
 </section>
+<!--Begin Progress Bars-->
 <section class="container-fluid" id="section_bg">
     <div class="row">
         <div class="col-6 px-0" id="progress_barr">
@@ -280,6 +281,9 @@
                     the
                     industry standar dummyy text ever since the when an iunesi known printer of took a galley of type.
                 </p>
+            </div>
+            <div>
+
             </div>
             <div class="progress">
                 <div class="progress-bar bg-info" data-max="80" role="progressbar">
@@ -305,6 +309,8 @@
         </div>
     </div>
 </section>
+<!--End Progress Bars-->
+<!--Begin Tabs and Accordion-->
 <section class="container-fluid spacer bg-light borders">
     <div class="container px-0">
         <div class="row">
@@ -546,6 +552,8 @@
         </div>
     </div>
 </section>
+<!--End Tabs and Accordion-->
+<!--Begin Running Numbers-->
 <section class="container-fluid">
     <div class="container spacer">
         <div class="row">
@@ -598,6 +606,8 @@
         </div>
     </div>
 </section>
+<!--End Running Numbers-->
+<!--Begin Carousel-->
 <section class="container-fluid bg-light borders">
     <div class="container spacer">
         <div class="row">
@@ -785,6 +795,7 @@
         </div>
     </div>
 </section>
+<!--End Carousel-->
 <section class="container spacer">
     <div class="row">
         <div class="col-md-12 text-center">
@@ -952,7 +963,8 @@
                     <div class="col-md-12">
                         <h6 class="py-2 text-white">COMPANY INFO</h6>
                         <img src="css/img/logo-light.png" alt="logo">
-                        <h6 class="py-2">There are many Purchase Now There are many variations of passages of Lorem Ipsum available, but the majority.</h6>
+                        <h6 class="py-2">There are many Purchase Now There are many variations of passages of Lorem
+                            Ipsum available, but the majority.</h6>
                         <a href="#">
                             <button>
                                 <span>
@@ -968,7 +980,8 @@
                         <h6 class="py-2 text-white">NEWSLETTER SIGNUP</h6>
                         <p>By subscribing to our mailing list you will always be update with the latest news :</p>
                         <div class="input-group mb-3">
-                            <input type="email" class="form-control" placeholder="Your Email Here ..."aria-label="Your Email Here ..." aria-describedby="basic-addon2">
+                            <input type="email" class="form-control" placeholder="Your Email Here ..."
+                                   aria-label="Your Email Here ..." aria-describedby="basic-addon2">
                             <div class="input-group-append">
                                 <button class="btn btn-outline-secondary" type="button">
                                     <i class="far fa-paper-plane"></i>
@@ -1001,7 +1014,7 @@
                         <div class="row">
                             <div class="col-md-5 pr-0">
                                 <a href="#">
-                                    <img class="smal-img" src="css/img/flicker3.jpg">
+                                    <img class="smal-img" src="css/img/thumb2.jpg">
                                 </a>
                             </div>
                             <div class="col-md-7 pr-0">
@@ -1033,7 +1046,7 @@
                         <div class="row">
                             <div class="col-md-5 pr-0">
                                 <a href="#">
-                                    <img class="smal-img" src="css/img/team1-large.jpg">
+                                    <img class="smal-img" src="css/img/thumb4.jpg">
                                 </a>
                             </div>
                             <div class="col-md-7 pr-0">
@@ -1054,19 +1067,169 @@
             </div>
             <div class="col-md-3">
                 <div class="row">
+                    <div class="col-md-12">
+                        <h6 class="py-2 text-white">CLOUD TAGS</h6>
+                        <a href="#">
+                            <button>Wordpress</button>
+                        </a>
+                        <a href="#">
+                            <button>Creative</button>
+                        </a>
+                        <a href="#">
+                            <button>CSS3</button>
+                        </a>
+                        <a href="#">
+                            <button>Design</button>
+                        </a>
+                        <a href="#">
+                            <button>Graphic</button>
+                        </a>
+                        <a href="#">
+                            <button>HTML5</button>
+                        </a>
+                        <a href="#">
+                            <button>SEO</button>
+                        </a>
+                        <a href="#">
+                            <button>CSS3</button>
+                        </a>
+                        <a href="#">
+                            <button>Web Design</button>
+                        </a>
+                    </div>
                 </div>
                 <div class="row">
+                    <div class="col-md-12"><h6 class="text-light mt-3"> FLICKER WIDGET </h6>
+                        <div class="row">
+                            <div class="col-md-4 my-3">
+                                <div id="img_div1">
+                                    <a href="#">
+                                        <div class="change-color img-fluid"><i class="fas fa-link"></i></div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-4 my-3">
+                                <div id="img_div2">
+                                    <a href="#">
+                                        <div class="change-color img-fluid"><i class="fas fa-link"></i></div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-4 my-3">
+                                <div id="img_div3">
+                                    <a href="#">
+                                        <div class="change-color img-fluid"><i class="fas fa-link"></i></div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div id="img_div4">
+                                    <a href="#">
+                                        <div class="change-color img-fluid"><i class="fas fa-link"></i></div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div id="img_div5">
+                                    <a href="#">
+                                        <div class="change-color img-fluid"><i class="fas fa-link"></i></div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div id="img_div6">
+                                    <a href="#">
+                                        <div class="change-color img-fluid"><i class="fas fa-link"></i></div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="row">
+                <div class="row px-0 mx-2">
+                    <div class="col-md-12 px-0">
+                        <h6 class="text-light py-2 mb-3">BEST AUTHOR</h6>
+                    </div>
+                    <div class="co-md-12 bg-white mt-3">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a>
+                                    <img class="img-fluid" src="css/img/team2-medium.jpg">
+                                </a>
+                            </div>
+                            <div class="col-md-6">
+                                <div>
+                                    <a>
+                                        <h6>John Doe</h6>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-twitter pr-1"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-facebook-f pr-1"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-google pr-1"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-linkedin-in pr-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mx-2">
+                    <div class="col-md-12 px-0">
+                        <h6 class="text-light py-2">CUSTOM VIDEO</h6>
+                    </div>
                 </div>
                 <div class="row">
+                    <div class="col-md-12">
+                        <div>
+                            <div id="video">
+                                <img class="img-fluid" src="css/img/videopic.jpg">
+                                <div id="play">
+                                </div>
+                                <div id="arrow">
+                                    <a>
+                                        <button id="arw" class="video" data-video="https://www.youtube.com/embed/5_iuNaULT5k"
+                                                data-toggle="modal" data-target="#videoModal">
+                                            <i class="far fa-play-circle"></i>
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </footer>
+<section class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="modal fade" id="videoModal" tabindex="-1" role="dialog"
+                 aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span></button>
+                            <iframe width="100%" height="350" src="" frameborder="0"
+                                    allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
